--- a/core/templates/includes/sidebar.html
+++ b/core/templates/includes/sidebar.html
@@ -1,7 +1,7 @@
     <div class="sidebar" data-color="purple" data-background-color="white" data-image="/static/assets/img/sidebar-1.jpg">
       <div class="logo">
         <a href="https://appseed.us/admin-dashboards/django-dashboard-material" class="simple-text logo-normal">
-          Django Dashboard
+          IRS
         </a>
       </div>
       {% if user.is_authenticated %}
@@ -23,6 +23,19 @@
             <a class="nav-link" href="/ui-tables.html">
               <i class="material-icons">content_paste</i>
               <p>Table List</p>
+            </a>
+          </li>
+          <li class="nav-item {% if 'products' in segment %} active {% endif %}">
+            <a class="nav-link" href="/products">
+              <i class="material-icons">shop</i>
+              <p>Products</p>
+            </a>
+          </li>
+         
+          <li class="nav-item {% if 'categories' in segment %} active {% endif %}">
+            <a class="nav-link" href="/categories.html">
+              <i class="material-icons">category</i>
+              <p>Categories</p>
             </a>
           </li>
           <li class="nav-item {% if 'ui-typography' in segment %} active {% endif %}">
